# sss-bitcoin

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
sss/: main.py  shamirs_secret_sharing.py
sss/shea256_secret_sharing/: polynomials.py  primes.py  sharing.py
tests/: test_split_combine.py
